# hw_fastapi

./: .gitignore  alembic.ini  main.py  pyproject.toml  test.db
alembic/: env.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
migrations/: env.py
migrations/versions/: 16cafb6f7c3b_.py  5eb09eab6f80_init.py  9205efec904a_init.py  d2799868932b_.py  e1282aa2fa12_.py
postgres-data/: postmaster.pid
postgres-data/base/13458/: pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  2224  2579  2604  2606  2608  2610  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  3501  3502  3503  3534  5002  pg_internal.init
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres-data/pg_stat_tmp/: db_0.stat  db_13458.stat  db_16384.stat  global.stat
postgres-data/pg_xact/: 0000
src/: shemas.py
src/conf/: config.ini  config.py
src/database/: models.py
src/repository/: find.py  users.py
src/routes/: auth.py  find.py  guest.py  users.py
src/services/: auth.py  cloudinary.py  email.py  roles.py
src/services/templates/: email_template.html
tests/: conftest.py  test_repository.py  test_route_auth.py  test_route_users.py
