[tool.poetry]
name = "hw-fastapi"
version = "0.1.0"
description = ""
authors = ["SergiiGoncharov13 <goncharov.s.work@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_fastapi"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.9"
psycopg2-binary = "^2.9.6"
alembic = "^1.10.3"
pydantic = {extras = ["email"], version = "^1.10.7"}
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
